# MyTeamHub

./: .gitignore  .runtime-audit.json  PLAN.md  PLAN_ORCHESTRATOR_OPENCLAW.md  README.md  SECURITY_REMEDIATION.md  ecosystem.config.js  npm-audit-server.json  package-lock.json  package.json  playwright.config.js
orchestrator/: .env.example  .gitignore  Cargo.toml  PHASE3.2_COMPLETION_REPORT.md  PHASE3.3_COMPLETION_REPORT.md  PHASE3.4_COMPLETION_REPORT.md  PHASE3.5_COMPLETION_REPORT.md  PHASE3.5_QUICKSTART.md  PHASE3_COMPLETE_SUMMARY.md
orchestrator/docs/: AGENT_CONTRACT_STRICT.md  BACKEND_INTEGRATION.md  DATA_MIGRATION.md  PHASE_1_COMPLETION.md  PHASE_1_FINAL_REPORT.md  PHASE_1_HANDOFF.md  PHASE_2_COURSE_CORRECTION.md  PHASE_2_EVENT_CONTRACT.md  PHASE_2_SPRINT_2_1.md  PHASE_2_SPRINT_2_1_COMPLETION.md  PHASE_2_SPRINT_2_2.md  SESSION_2026-04-17_PHASE_2_SPRINT_2_1.md  STATE_MACHINE_GUARANTEES.md  TEAM_STUDIO_INTEGRATION.md  VAULT_SCHEMA.md
orchestrator/scripts/: migrate.js  test-integration.sh
orchestrator/src/: lib.rs  main.rs
orchestrator/src/api/: handlers.rs  mod.rs  orchestrator.rs  orchestrator_handlers.rs  types.rs
orchestrator/src/orchestrator/: agent.rs  agent_executor.rs  agent_permission_model.rs  agent_registry.rs  agent_selector.rs  config.rs  crash_recovery.rs  events.rs  (+17 more)
orchestrator/tests/: agent_integration.rs  agent_switching_integration.rs  orchestrator_api_integration.rs  process_isolation_integration.rs  reality_integration_phase3_5.rs  security_verification_integration.rs  simple_observability_integration.rs
orchestrator/vault/: MOC.md
(+214 files in other folders)
