[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"
http = "1"

[dev-dependencies]
tempfile = "3"
